--- a/example/web_ex/pubspec.yaml
+++ b/example/web_ex/pubspec.yaml
@@ -5,12 +5,12 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  http:
+  http: ^1.2.0
   epubrs:
     path: ../..
-  archive:
+  archive: ^3.4.10
+  web: ^0.4.2
 
 dev_dependencies:
-  build_runner:
-  build_web_compilers:
-  pedantic:
+  build_runner: ^2.4.8
+  build_web_compilers: ^4.0.9
