--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,15 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  archive: ^3.1.6
-  collection: ^1.15.0
+  archive: ^3.4.10
+  collection: ^1.18.0
   fpdart: ^1.1.0
   image: ^4.1.7
-  path: ^1.8.1
-  quiver: ^3.0.1+1
-  xml: ^6.0.1
+  path: ^1.9.0
+  quiver: ^3.2.1
+  xml: ^6.5.0
 
 
 dev_dependencies:
-  test: ^1.16.7
-  pedantic: ^1.11.0
+  test: ^1.25.2
+  lints: ^3.0.0
