--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: epubrs
 description: EPUB Reading Systems
 homepage: https://github.com/pedia/epubrs
-version: 0.0.3
+version: 0.1.0
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -14,6 +14,7 @@ dependencies:
   path: ^1.9.0
   quiver: ^3.2.1
   xml: ^6.5.0
+  uuid: ^4.3.2
 
 dev_dependencies:
   test: ^1.25.2
