--- a/epub3/pubspec.yaml
+++ b/epub3/pubspec.yaml
@@ -1,7 +1,7 @@
 name: epub3
-description: EPUB3 Read and Write. EPUB Reading Systems
+description: Epub3 file Read and Write.
 homepage: https://github.com/pedia/epub3
-version: 0.2.0
+version: 0.2.2
 
 environment:
   sdk: '>=2.14.0 <4.0.0'
