--- a/epubview/pubspec.yaml
+++ b/epubview/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   epub3:
+  html2md: ^1.3.1
+  markdown: ^7.2.2
+  markdown_widget: ^2.3.2+6
+  flutter_markdown: ^0.6.20
 
 dev_dependencies:
   flutter_test:
